# swamp-up-lab-6

./: .gitignore  README.md  XRAY_SCRIPT_INSTRUCTIONS.md  assignment.md  lab3-curation-ai-ml-security.md  pyproject.toml
output/: lab2-legal-condition.json  lab2-legal-policy.json  lab2-security-condition.json  lab2-security-policy.json  lab6-cve-condition.json  lab6-cve-policy.json  lab6-huggingface-condition.json  lab6-huggingface-malicious-condition.json  lab6-huggingface-malicious-policy.json  lab6-legal-condition.json.bcp  lab6-legal-policy.json  lab6-npm-cve-condition.json  lab6-npm-cve-policy.json  lab6-pypi-cve-condition.json  lab6-pypi-cve-policy.json  lab6-security-condition.json  lab6-security-policy.json  lab6-security-policy.json.tbd
output/package-labels/: lab2-cve-package-labels.graphql  lab2-legal-package-labels.graphql  lab2-security-package-labels.graphql
scripts/: post_conditions_and_policies.sh  post_graphql_to_catalog.sh
