[project]
name = "swamp-up-lab-6"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Shumilov",email = "alexsh@jfrog.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "lab2-pypi-remote"
url = "https://psazuse.jfrog.io/artifactory/api/pypi/lab2-pypi-remote/simple"
priority = "primary"

